--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
   h1 Train Schedule
+  h2 new train
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
